[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4", "setuptools_scm"]

[project]
name = "regdiffusion"
authors = [
    { name = "Hao Zhu", email="haozhu233@gmail.com"},
    { name = "Donna Slonim", email="donna.slonim@tufts.edu"}
]
maintainers = [
    { name = "Hao Zhu", email = "haozhu233@gmail.com" }
]
license = {file = "LICENSE"}
description = "Gene Regulatory Networks Inference using diffusion model"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: Apache Software License"]
readme = "README.md"

dependencies = [
    "numpy>=1.16.5",
    "pandas>=1.1.1",
    "torch",
    "tqdm",
    "scanpy",
    "scikit-learn"
]

[project.urls]
Home = "https://github.com/TuftsBCB/RegDiffusion"

[tool.flit.module]
name = "regdiffusion"