[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regdiffusion"
authors = [
    { name = "Hao Zhu", email="haozhu233@gmail.com"},
    { name = "Donna Slonim", email="donna.slonim@tufts.edu"}
]
maintainers = [
    { name = "Hao Zhu", email = "haozhu233@gmail.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
version = "0.0.7"
description = "Gene Regulatory Networks Inference using diffusion model"

classifiers = ["License :: OSI Approved :: Apache Software License"]

dependencies = [
    "numpy>=1.16.5",
    "pandas>=1.1.1",
    "torch",
    "tqdm",
    "scanpy",
    "scikit-learn",
    "h5py",
    "pyvis"
]

[project.urls]
Home = "https://github.com/TuftsBCB/RegDiffusion"

[tool.flit.module]
name = "regdiffusion"
